// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to display sending... when message is still in optimistic state 1`] = `
<div
  data-message-id="messageThread12_1"
  data-styleName="message messageHeader"
>
  <div
    data-styleName="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/m/1"
    />
  </div>
  <div
    data-styleName="content"
  >
    <div>
      <span
        data-styleName="name"
      >
        Good Person
      </span>
      <span
        data-styleName="date"
      >
        sending...
      </span>
    </div>
    <div
      data-styleName="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest non-header snapshot 1`] = `
<div
  data-message-id="1"
  data-styleName="message"
>
  <div
    data-styleName="avatar"
  />
  <div
    data-styleName="content"
  >
    <div
      data-styleName="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest snapshot 1`] = `
<div
  data-message-id="1"
  data-styleName="message messageHeader"
>
  <div
    data-styleName="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/m/1"
    />
  </div>
  <div
    data-styleName="content"
  >
    <div>
      <span
        data-styleName="name"
      >
        Good Person
      </span>
      <span
        data-styleName="date"
      />
    </div>
    <div
      data-styleName="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;
